--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "async": "^1.4.2",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "dotenv": "^9.0.2",
     "express": "^4.15.4",
     "forever": "^0.15.3",
     "handlebars": "^4.0.10",
